# blueboat_ws

./: .gitignore
src/blueboat_bringup/: CMakeLists.txt  package.xml
src/blueboat_bringup/launch/: blueboat.launch.py
src/blueboat_description/: CMakeLists.txt  package.xml
src/blueboat_description/launch/: display.launch.py
src/blueboat_description/rviz/: nav_config.rviz
src/blueboat_description/urdf/: blueboat.urdf.xacro
src/blueboat_hardware_interface/: package.xml  setup.cfg  setup.py
src/blueboat_hardware_interface/blueboat_hardware_interface/: base_controller_node.py
src/blueboat_hardware_interface/launch/: hardware_interface.launch.py
src/blueboat_localization/: CMakeLists.txt  package.xml
src/blueboat_localization/config/: ekf.yaml  navsat_transform.yaml
src/blueboat_localization/launch/: localization.launch.py
src/blueboat_navigation/: CMakeLists.txt  package.xml
src/blueboat_navigation/config/: nav2_params.yaml
src/blueboat_navigation/launch/: navigation.launch.py
src/blueboat_navigation/maps/: dummy_map.pgm  dummy_map.yaml
src/blueboat_sensors/: package.xml  setup.cfg  setup.py
src/blueboat_sensors/blueboat_sensors/: placeholder_gps_node.py  placeholder_imu_node.py  placeholder_lidar_node.py
src/blueboat_sensors/launch/: sensors.launch.py
