<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blueboat_bringup</name>
  <version>0.0.0</version>
  <description>Package description</description>
  <maintainer email="bb@todo.todo">bb</maintainer>
  <license>Apache-2.0</license> <!-- Replace with actual license -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies -->
  <depend>launch_ros</depend>
  <depend>blueboat_description</depend>
  <exec_depend>blueboat_hardware_interface</exec_depend>
  <exec_depend>blueboat_sensors</exec_depend>
  <depend>blueboat_localization</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
